# ABR2025

./: .gitignore  Correlation_hist_v2.py  Grand_averages.py  PSD_plots.py  Plot_thresholds.py  README.md  RUN_STEPS1-2.py  Stats_pickle_v2.py  Step1.py  Step1_cohort_info.py  Step1_cohort_info_CR.py  Step1_metadata.py  Step2.py  Step2_cohort_align.py  Step2_cohort_align_CR.py  Step2a1_align.py  Step2a2.py  Step2a2_PSD.py  Step2a3_raw.py  Step2b.py  Step2b_averaging.py  Step2b_avg.py  Step2c.py  Step2c_power_thresholds.py  Step2c_thresh.py  Step2d.py  Step2d_EKG.py  Step3_cohort_ABR_plots.py  Step3a.py  Step3a_avgplot.py  Step3b.py  Step3b_corr.py  Step4a.py  Step4a_peaks.py  abra-conda-lock.txt  abrpresto-conda-lock.txt  fig4_plots.py  loading.py  opensabr-conda-lock.txt  peak_picking.py  (+3 more)
abr/: loading.py
cohort_scripts/: Step2_cohort_align.py
designs/: README.md
gui/: README.md  file_io.py  graphics.py
hardware_designs/: README.md  Table 1 - Bill of Materials.ods
metadata/: 2025-07-25 ABR paper metadata - mouse metadata.csv  250620_HL_cohort_mouse_info.csv  250630_cohort_mouse_info.csv
scripts/: README.md  Step1_metadata.py  Step2a1_align.py  Step2a1b_align_long.py  Step2a2_PSD.py  Step2a3_raw.py  Step2a_align.py  Step2b2_abra.py  Step2b3_presto.py  Step2b_PSD.py  Step2b_avg.py  Step2c_raw.py  Step2c_thresh.py  Step2d_EKG.py  Step2d_PSD.py  Step2e_EKG.py  Step3a_abra.py  Step3a_avgplot.py  Step3b_corr.py  Step3b_presto.py  Step4a_peaks.py  Step4b_avgplot.py  Step4b_peaks.py  Step4c_corr.py  Step5b_peaks.py  Step5c_abra_peaks.py  Step5c_peak_plots.py  shared.py  (+3 more)
(+68 files in other folders)
