[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenSABR"
version = "0.1.0"
description = "OpenSABR (Open-source Auditory Brainstem Response) acquisition, analysis, and demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "ipython",
    "tqdm",
]

[project.optional-dependencies]
gui = [
    "PyQt5",
    "pyqtgraph",
    "pyserial",
]

[tool.setuptools.packages.find]
where = ["src"]
